test/scc/lex/errors/000.a
000.t:1:1: error: token overflowed internal buffer